# openlily

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
examples/: README.md  custom_brain_and_tool.py  pipecat_cloud_bot.py
server/: .env.example  barge_in.py  bot.py  brains.yaml.example  env.py  idle_keepalive.py  observers.py  prompt.py  pyproject.toml  sound.py  transport_local.py  working_sound.py
server/brains/: __init__.py  base.py  cartesia_meta.py  cartesia_openai.py  config.py  local_whisper_ollama_kokoro.py  openai_realtime.py  openai_standard.py  overrides.py
server/src/openlily/: __init__.py  agent.py  cli.py  config.py  observers.py  working_sound.py
server/src/openlily/brains/: __init__.py  base.py  cartesia_meta.py  cartesia_openai.py  config.py  openai_realtime.py  openai_standard.py  overrides.py
server/src/openlily/local/: __init__.py  barge_in.py  transport.py
server/src/openlily/local/wakeword/: engine.py
server/src/openlily/tools/: mcp_bundle.py  mcp_pool.py  registry.py  runtime.py
server/src/openlily/tools/email/: __init__.py  config.py
server/src/openlily/tools/session/: __init__.py
server/src/openlily/tools/web/: __init__.py  config.py  exa.py
server/src/openlily/tools/x/: __init__.py
server/tests/: conftest.py  test_bot_config.py  test_brain_config.py  test_brain_overrides.py  test_browser_config.py  test_env.py  test_mcp_pool.py  test_notion_tools.py  test_prompt.py  test_tool_registry.py  test_tools_setup.py
server/tools/: __init__.py  base.py  bundle.py  contracts.py  mcp_bundle.py  mcp_pool.py  registry.py  runtime.py
server/tools/browser/: __init__.py  config.py
server/tools/email/: __init__.py  base.py  resend_provider.py
server/tools/notion/: __init__.py  config.py
server/tools/session/: __init__.py
server/tools/web/: __init__.py
server/tools/x/: __init__.py  config.py
server/wakeword/: __init__.py  audio.py  listener.py
