[project]
name = "openlily"
version = "0.1.0"
description = "Voice AI bot built with Pipecat"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # Cloud brains + the local-audio mic CLI and wake-word mode. Deliberately
    # omits the local-*model* runtimes (mlx-whisper/whisper/kokoro) — those live
    # in the `local-models` extra below so a cloud-only install stays lean and
    # never pulls torch/CUDA. `local` here is pipecat's *local-audio* extra
    # (PyAudio for the mic transport), which the default run mode needs even with
    # a cloud brain — unrelated to local models.
    "pipecat-ai[cartesia,local,mcp,openai,runner,silero,webrtc]>=1.4.0",
    # Standalone WebRTC Audio Processing Module (AEC + noise suppression + AGC)
    # for the local-audio CLI run. Only rtc.AudioProcessingModule is used; no
    # LiveKit room/server/credentials are involved.
    "livekit>=1.0",
    # Exa Python SDK for the web search tools (tools/web/).
    "exa-py>=2.14.0",
    # Wake-word detection for the --mode local-with-wake-word run mode (wakeword/).
    # onnxruntime is openWakeWord's default inference backend. PyAudio (the wake
    # listener's mic backend) already comes with pipecat-ai[local] above.
    "openwakeword~=0.6",
    "onnxruntime",
    "resend>=2.30.1",
    # Parse the optional brains.yaml model/voice overrides (brains/overrides.py).
    "pyyaml>=6",
]

[project.optional-dependencies]
# On-device model runtimes for the `local_whisper_ollama_kokoro` brain. Kept out
# of the base install because these are heavy: `mlx-whisper` drags in torch (and,
# on Linux, the whole nvidia-* CUDA stack), `whisper` adds faster-whisper, and
# `kokoro` adds the Kokoro ONNX TTS. Users who only run cloud brains never need
# them; install with `uv sync --extra local-models` (or `pip install '.[local-models]'`).
# NB: pipecat's whisper module imports faster-whisper at top level, so the
# `whisper` extra is required alongside `mlx-whisper` even though the local brain
# only uses the MLX subclass.
local-models = [
    "pipecat-ai[kokoro,mlx-whisper,whisper]>=1.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
