[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlily"
version = "0.5.0"
description = "Reusable Pipecat voice-agent toolkit (brains, tools, and audio cues)"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # Core library: cloud brains (STT/LLM/TTS harnesses), the MCP tool runtime,
    # and the dev-runner/WebRTC transport. Deliberately omits pipecat's *local*
    # (PyAudio mic) extra and the local-*model* runtimes -- those are only needed
    # by the terminal CLI and the on-device brain, so they live in the `local`
    # and `local-models` extras below to keep a plain library install lean (never
    # pulls PyAudio, LiveKit, wake-word, or torch/CUDA on `import openlily`).
    "pipecat-ai[cartesia,mcp,openai,runner,silero,webrtc]>=1.4.0",
    # Parse the optional brains.yaml model/voice overrides (brains/overrides.py).
    # Lightweight, pure-Python, and imported on the core path, so kept in base.
    "pyyaml>=6",
]

[project.optional-dependencies]
# Local terminal CLI: the gated local-audio transport (mic/speakers) and the
# optional wake-word run mode. Only needed to run `openlily` on the machine's
# own audio; a library consumer wiring their own transport never needs these.
# - pipecat-ai[local] provides PyAudio for the mic transport (and the wake
#   listener's mic backend).
# - livekit is used only for its standalone WebRTC Audio Processing Module
#   (AEC + noise suppression + AGC); no LiveKit room/server/credentials.
# - openwakeword (+ onnxruntime, its default inference backend) powers the
#   `--mode local-with-wake-word` run mode.
local = [
    "pipecat-ai[local]>=1.4.0",
    "livekit>=1.0",
    "openwakeword~=0.6",
    "onnxruntime",
]

# Exa-backed web_search / web_fetch tools (tools/web/). Only needed when a brain
# uses the Exa tool; imported lazily so the base install skips the SDK.
web = [
    "exa-py>=2.14.0",
]

# Resend-backed email tool (tools/email/). Only needed when the email tool is
# enabled; imported lazily so the base install skips these.
# - resend is the email API client.
# - markdown renders the email body to HTML (resend_provider.py).
email = [
    "resend>=2.30.1",
    "markdown>=3.7",
]

# On-device model runtimes for the `local_whisper_ollama_kokoro` brain. Kept out
# of the base install because these are heavy: `mlx-whisper` drags in torch (and,
# on Linux, the whole nvidia-* CUDA stack), `whisper` adds faster-whisper, and
# `kokoro` adds the Kokoro ONNX TTS. Users who only run cloud brains never need
# them; install with `uv sync --extra local-models` (or `pip install '.[local-models]'`).
# NB: pipecat's whisper module imports faster-whisper at top level, so the
# `whisper` extra is required alongside `mlx-whisper` even though the local brain
# only uses the MLX subclass.
local-models = [
    "pipecat-ai[kokoro,mlx-whisper,whisper]>=1.4.0",
]

# Convenience meta-extra: everything (terminal CLI, all tools, on-device models).
all = [
    "openlily[local,web,email,local-models]",
]

# Console entry point mirrors `uv run bot.py`: `openlily`, `openlily --mode local`,
# `openlily --mode webrtc`.
[project.scripts]
openlily = "openlily.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openlily"]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]

[tool.pytest.ini_options]
# ``src`` so tests import the ``openlily`` package; ``.`` so the root ``bot.py``
# shim is importable too.
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"
